remap non-element entities in the transformer in order to handle entities referencing each other out of order (#4137)
## What & Why

Before this PR, the transformer when copying an aspect's props will put the invalid id `0` in a navigation property if that aspect entity hasn't been mapped to the target yet. This causes crashes when processing `ExternalSourceAspects` in some models because their `scope` is expected to be valid. Worse, it has caused data loss in the past. We have a way of handling that for elements, which is putting it in the `partiallyCommittedElements` and `pendingReferences` collections and resolving those references, updating the corresponding element with the mapped id once we have it. This PR generalizes `partiallyCommittedElements` to all entities and provides some ways to refer to, insert, and update entities generically.

## Changes
- depends on a [native PR](https://dev.azure.com/bentleycs/iModelTechnologies/_git/imodel02/pullrequest/276050)
- change `deepEqualWithFpTolerance` to `advanceEqual` with the ability to compare denormalized class names in ec props correctly, fix up small parts of older test code to use this where it makes the intent more readable
- add the `EntityReference` type, which is an Id64 but with the a root bis class tag (`ConcreteEntityTypes`) prepended, to make it possible to use them in sets of potentially overlapping id spaces (elements and non-element entities have overlapping Id64 spaces)
- `insertAspect` and corresponding aspect import functions in the transformer now returns the id (this necessitated the native change)
- introduce the future of `getReferenceIds` as the temporary `getReferenceConcreteIds` which gets an `EntityReference`. In a future breaking change, `@internal` `getReferenceConcreteIds` will be removed but its implementation will replace that of the `@beta` `getReferenceIds`.
- add an `ECReferenceTypesCache` to store the `ConcreteEntityTypes` of relationships and navigation properties, fo

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -64,7 +64,7 @@
         "test:integration"
       ],
       "outFiles": [
-        "${workspaceFolder}/core/transformer/lib/**/*.js"
+        "${workspaceFolder}/core/{backend,common,transformer}/lib/**/*.js"
       ],
       "console": "integratedTerminal"
     },
@@ -81,9 +81,13 @@
       "runtimeArgs": [
         "test"
       ],
+      "env": {
+        "LOG_TRANSFORMER_IN_TESTS": "1"
+      },
       "outFiles": [
-        "${workspaceFolder}/core/{backend,transformer}/lib/**/*.js"
-      ]
+        "${workspaceFolder}/core/{backend,common,transformer}/lib/**/*.js"
+      ],
+      "console": "integratedTerminal"
     },
     {
       "name": "Bentley Tests",
