Files changed by rush

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -819,6 +819,10 @@
       "allowedCategories": [ "internal" ]
     },
     {
+      "name": "node-simctl",
+      "allowedCategories": [ "internal" ]
+    },
+    {
       "name": "nodemon",
       "allowedCategories": [ "tools" ]
     },
