--- a/core/geometry/package.json
+++ b/core/geometry/package.json
@@ -70,6 +70,7 @@
     "extends": "plugin:@itwin/itwinjs-recommended",
     "rules": {
       "@typescript-eslint/indent": "off",
+      "max-statements-per-line": "off",
       "nonblock-statement-body-position": "off"
     }
   }
