Revert "remap non-element entities in the transformer in order to handle entities referencing each other out of order (#4137)"
This reverts commit 4896837f9d1e3ef62be3abfae452dd43a33488d4.

# Conflicts:
#	docs/changehistory/NextVersion.md

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -64,7 +64,7 @@
         "test:integration"
       ],
       "outFiles": [
-        "${workspaceFolder}/core/{backend,common,transformer}/lib/**/*.js"
+        "${workspaceFolder}/core/transformer/lib/**/*.js"
       ],
       "console": "integratedTerminal"
     },
@@ -81,13 +81,9 @@
       "runtimeArgs": [
         "test"
       ],
-      "env": {
-        "LOG_TRANSFORMER_IN_TESTS": "1"
-      },
       "outFiles": [
-        "${workspaceFolder}/core/{backend,common,transformer}/lib/**/*.js"
-      ],
-      "console": "integratedTerminal"
+        "${workspaceFolder}/core/{backend,transformer}/lib/**/*.js"
+      ]
     },
     {
       "name": "Bentley Tests",
