lock down artifact version is release pipeline

--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -18,6 +18,7 @@ resources:
   pipelines:
   - pipeline: itwinjs-docs
     source: iTwin.js Docs - YAML
+    version: 20220926.22
     trigger:
       branches:
         include:
