fix job parameter

--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -54,7 +54,7 @@ stages:
     jobs:
     - template: ./jobs/docs/product-tests.yaml
       parameters:
-        env: DEV
+        env: Development
 
   # - stage: QA
   #   displayName: Deployment (QA)
