comment out failing demand

--- a/common/config/azure-pipelines/jobs/docs/deploy-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/deploy-docs.yaml
@@ -10,7 +10,7 @@ jobs:
 - job: Deploy - ${{ parameters.env }}
   pool:
     name: PRG Octo Deploy Only
-    demands: DotNetFramework -exists
+    # demands: DotNetFramework -exists
   steps:
     - script: |
         echo * * * * * * * * * *
