--- a/common/config/azure-pipelines/jobs/docs/deploy-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/deploy-docs.yaml
@@ -7,7 +7,7 @@ parameters:
   - Production
 
 jobs:
-- job: Deploy - ${{ parameters.env }}
+- job: Deploy to ${{ parameters.env }}
   pool:
     name: PRG Octo Deploy Only
     # demands: DotNetFramework -exists
