--- a/common/config/azure-pipelines/jobs/docs/product-tests.yaml
+++ b/common/config/azure-pipelines/jobs/docs/product-tests.yaml
@@ -7,7 +7,7 @@ parameters:
   - Production
 
 jobs:
-- job: ProductTests-${{ parameters.env }}
+- job: ProductTests ${{ parameters.env }}
   pool:
     name: SecurityScans
     demands: Agent.OS -equals Windows_NT
