--- a/common/config/azure-pipelines/jobs/docs/package-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/package-docs.yaml
@@ -2,7 +2,7 @@
 # and running a step to combine everything.
 
 jobs:
-  - job: Package Docs
+  - job: Package_Docs
     workspace:
       clean: all
     pool:
