--- a/common/config/azure-pipelines/jobs/docs/package-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/package-docs.yaml
@@ -72,7 +72,7 @@ jobs:
         displayName: 'Push package to Octopus'
         inputs:
           OctoConnectedServiceName: 'Prod Octopus'
-          Package: '$(System.ArtifactsDirectory)\$(Release.PrimaryArtifactSourceAlias)\iModeljsDocumentationFiles_$(Build.BuildNumber)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
+          Package: '$(Build.ArtifactStagingDirectory)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
           Replace: false
 
       - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
