--- a/extensions/map-layers/package.json
+++ b/extensions/map-layers/package.json
@@ -85,7 +85,7 @@
     "typescript": "~4.4.0"
   },
   "dependencies": {
-    "classnames": "2.3.1",
+    "classnames": "^2.3.1",
     "react-beautiful-dnd": "^13.0.0"
   },
   "peerDependencies": {
