--- a/presentation/components/package.json
+++ b/presentation/components/package.json
@@ -49,7 +49,7 @@
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-icons-react": "^1.8.0",
     "@itwin/itwinui-react": "~1.42.0",
-    "classnames": "2.3.1",
+    "classnames": "^2.3.1",
     "fast-deep-equal": "^3.1.3",
     "fast-sort": "^3.0.2",
     "micro-memoize": "^4.0.9",
