--- a/common/config/azure-pipelines/jobs/docs/package-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/package-docs.yaml
@@ -66,13 +66,13 @@ jobs:
           packagesToPack: '$(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
           versioningScheme: byBuildNumber
           configuration: Release
-          packDestination: '$(Build.ArtifactStagingDirectory)'
+          packDestination: '$(Build.ArtifactStagingDirectory)\iModeljsDocumentationFiles_$(Build.BuildNumber)'
 
       - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-push.OctopusPush@3
         displayName: 'Push package to Octopus'
         inputs:
           OctoConnectedServiceName: 'Prod Octopus'
-          Package: '$(Build.ArtifactStagingDirectory)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
+          Package: '$(Build.ArtifactStagingDirectory)\iModeljsDocumentationFiles_$(Build.BuildNumber)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
           Replace: false
 
       - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
