--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -8,18 +8,19 @@ jobs:
 - job:
   strategy:
     matrix:
-      "Windows_${{ parameters.name }}":
-        OS: windows-latest
-        platform: Windows_NT
-        name: $(win_pool)
-      "Linux_${{ parameters.name }}":
-        OS: ubuntu-latest
-        platform: Linux
-        name: $(linux_pool)
+      # "Windows_${{ parameters.name }}":
+      #   OS: windows-latest
+      #   platform: Windows_NT
+      #   name: $(win_pool)
+      # "Linux_${{ parameters.name }}":
+      #   OS: ubuntu-latest
+      #   platform: Linux
+      #   name: $(linux_pool)
       "MacOS_${{ parameters.name }}":
         OS: macOS-latest
         platform: Darwin
         name: $(mac_pool)
+        demands: 'Agent.Name -equals BuildMacMinion04-A'
 
   timeoutInMinutes: 120
 
