--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -84,9 +84,9 @@ steps:
     displayName: rush docs
     workingDirectory: ${{ parameters.workingDir }}
 
-  # Will run if even there is a failure somewhere else in the pipeline.
-  - template: ../templates/publish-test-results.yaml
-    parameters:
-      NodeVersion: ${{ parameters.nodeVersion }}
-  # The publish script identifies any new packages not previously published and tags the build
-  - template: ../templates/publish.yaml
+  # # Will run if even there is a failure somewhere else in the pipeline.
+  # - template: ../templates/publish-test-results.yaml
+  #   parameters:
+  #     NodeVersion: ${{ parameters.nodeVersion }}
+  # # The publish script identifies any new packages not previously published and tags the build
+  # - template: ../templates/publish.yaml
