fix path to template

--- a/common/config/azure-pipelines/ci.yaml
+++ b/common/config/azure-pipelines/ci.yaml
@@ -58,7 +58,7 @@ jobs:
 
   steps:
   - checkout: self
-  - template: templates/core-build.yaml
+  - template: ../templates/core-build.yaml
     parameters:
       nodeVersion: 16.13.0
 
