--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -49,6 +49,6 @@ jobs:
 
   steps:
   - checkout: self
-  - template: templates/core-build.yaml
+  - template: ../templates/core-build.yaml
     parameters:
       nodeVersion: 16.13.0
