--- a/common/config/azure-pipelines/jobs/regression-testing.yaml
+++ b/common/config/azure-pipelines/jobs/regression-testing.yaml
@@ -103,7 +103,7 @@ jobs:
 
   steps:
   - checkout: self
-  - template: templates/core-build.yaml
+  - template: ../templates/core-build.yaml
     parameters:
       nodeVersion: $(node_version)
 
