--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -927,6 +927,10 @@
       "allowedCategories": [ "frontend", "internal" ]
     },
     {
+      "name": "react-select-async-paginate",
+      "allowedCategories": [ "frontend" ]
+    },
+    {
       "name": "react-select-event",
       "allowedCategories": [ "frontend" ]
     },
