--- a/common/config/azure-pipelines/jobs/docs/package-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/package-docs.yaml
@@ -9,12 +9,8 @@ jobs:
       name: iModelTechCI
       demands: Agent.OS -equals Windows_NT
     variables:
-      tempDocsLocation: $(Pipeline.Workspace)\itwinjs-docs
+      tempDocsLocation: $(Pipeline.Workspace)\itwinjs-docs\DocsBuild
     steps:
-      - checkout: self
-        path: itwinjs-core
-        clean: true
-
       - task: NodeTool@0
         displayName: Use Node 14
         inputs:
@@ -66,13 +62,13 @@ jobs:
           packagesToPack: '$(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
           versioningScheme: byBuildNumber
           configuration: Release
-          packDestination: '$(Build.ArtifactStagingDirectory)\iModeljsDocumentationFiles_$(Build.BuildNumber)'
+          packDestination: '$(Build.ArtifactStagingDirectory)'
 
       - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-push.OctopusPush@3
         displayName: 'Push package to Octopus'
         inputs:
           OctoConnectedServiceName: 'Prod Octopus'
-          Package: '$(Build.ArtifactStagingDirectory)\iModeljsDocumentationFiles_$(Build.BuildNumber)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
+          Package: '$(Build.ArtifactStagingDirectory)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
           Replace: false
 
       - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
