--- a/extensions/map-layers-formats/package.json
+++ b/extensions/map-layers-formats/package.json
@@ -34,6 +34,7 @@
     "url": "http://www.bentley.com"
   },
   "devDependencies": {
+    "@itwin/appui-abstract": "workspace:*",
     "@itwin/build-tools": "workspace:*",
     "@itwin/core-bentley": "workspace:*",
     "@itwin/core-common": "workspace:*",
@@ -58,6 +59,7 @@
     "typescript": "~4.4.0"
   },
   "peerDependencies": {
+    "@itwin/appui-abstract": "workspace:^3.4.0-dev.7",
     "@itwin/core-bentley": "workspace:^3.4.0-dev.7",
     "@itwin/core-common": "workspace:^3.4.0-dev.7",
     "@itwin/core-geometry": "workspace:^3.4.0-dev.7"
