--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -30,27 +30,29 @@ resources:
         - release/1*
       tags:
       - iTwinJsDocsRelease
+  - pipeline: bemetalsmith-tests
+    source: Bemetalsmith - Selenium Tests
 
 variables:
   octopusProjectName: iModel.js Documentation
 
 stages:
-  - stage: PackageAndPush
-    displayName: Package Docs and Push to Octopus
-    jobs:
-    - template: ./jobs/docs/package-docs.yaml
+  # - stage: PackageAndPush
+  #   displayName: Package Docs and Push to Octopus
+  #   jobs:
+  #   - template: ./jobs/docs/package-docs.yaml
 
-  - stage: DEV
-    displayName: Deployment (DEV)
-    dependsOn: PackageAndPush
-    jobs:
-    - template: ./jobs/docs/deploy-docs.yaml
-      parameters:
-        env: Development
+  # - stage: DEV
+  #   displayName: Deployment (DEV)
+  #   dependsOn: PackageAndPush
+  #   jobs:
+  #   - template: ./jobs/docs/deploy-docs.yaml
+  #     parameters:
+  #       env: Development
 
   - stage: ProductTestsDEV
     displayName: Product Tests (DEV)
-    dependsOn: DEV
+    # dependsOn: DEV
     jobs:
     - template: ./jobs/docs/product-tests.yaml
       parameters:
