--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -33,3 +33,5 @@ jobs:
         name: $(name)
         demands:
           - Agent.OS -equals $(platform)
+          - Agent.Name -equals BuildMacMinion04-A
+
