--- a/core/rpc/frontend/package.json
+++ b/core/rpc/frontend/package.json
@@ -12,9 +12,9 @@
     "build:cjs": "tsc 1>&2 --outDir lib/cjs",
     "build:esm": "tsc 1>&2 --module ES2020 --outDir lib/esm",
     "clean": "rimraf lib .rush/temp/package-deps*.json",
-    "docs": "betools docs --includes=../../generated-docs/extract --json=../../generated-docs/core/core-rpc-frontend/file.json --tsIndexFile=./core-rpc-frontend.ts --onlyJson",
+    "docs": "betools docs --includes=../../../generated-docs/extract --json=../../../generated-docs/core/core-rpc-frontend/file.json --tsIndexFile=./core-rpc-frontend.ts --onlyJson",
     "extract-api": "betools extract-api --entry=core-rpc-frontend && npm run extract-extension-api",
-    "extract-extension-api": "eslint --no-eslintrc -c \"../../tools/eslint-plugin/dist/configs/extension-exports-config.js\" \"./src/**/*.ts\" 1>&2",
+    "extract-extension-api": "eslint --no-eslintrc -c \"../../../tools/eslint-plugin/dist/configs/extension-exports-config.js\" \"./src/**/*.ts\" 1>&2",
     "lint": "eslint -f visualstudio \"./src/**/*.ts\" 1>&2",
     "test": "mocha",
     "cover": "nyc npm -s test"
