--- a/core/ecschema-metadata/package.json
+++ b/core/ecschema-metadata/package.json
@@ -56,7 +56,7 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "peerDependencies": {
     "@itwin/core-bentley": "workspace:^3.5.0-dev.3",
