--- a/core/electron/package.json
+++ b/core/electron/package.json
@@ -55,7 +55,7 @@
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "dependencies": {
     "@openid/appauth": "^1.2.6",
