--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -84,7 +84,7 @@
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
     "source-map-loader": "^4.0.0",
-    "typescript": "~4.4.0",
+    "typescript": "4.9.1-beta",
     "webpack": "^5.64.4"
   },
   "//dependencies": [
