--- a/core/geometry/package.json
+++ b/core/geometry/package.json
@@ -49,7 +49,7 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "dependencies": {
     "@itwin/core-bentley": "workspace:*",
