--- a/core/hypermodeling/package.json
+++ b/core/hypermodeling/package.json
@@ -61,7 +61,7 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "source-map-loader": "^4.0.0",
-    "typescript": "~4.4.0",
+    "typescript": "4.9.1-beta",
     "webpack": "^5.64.4"
   },
   "dependencies": {
