--- a/core/mobile/package.json
+++ b/core/mobile/package.json
@@ -71,7 +71,7 @@
     "js-base64": "^3.6.1",
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "eslintConfig": {
     "plugins": [
