--- a/core/orbitgt/package.json
+++ b/core/orbitgt/package.json
@@ -45,7 +45,7 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.5",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "nyc": {
     "extends": "./node_modules/@itwin/build-tools/.nycrc"
