--- a/core/telemetry/package.json
+++ b/core/telemetry/package.json
@@ -48,7 +48,7 @@
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
     "source-map-loader": "^4.0.0",
-    "typescript": "~4.4.0",
+    "typescript": "4.9.1-beta",
     "webpack": "^5.64.4"
   },
   "eslintConfig": {
