--- a/core/transformer/package.json
+++ b/core/transformer/package.json
@@ -69,7 +69,7 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "dependencies": {
     "semver": "^7.3.5"
