--- a/domains/analytical/backend/package.json
+++ b/domains/analytical/backend/package.json
@@ -57,7 +57,7 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "dependencies": {
     "semver": "^7.3.5"
