--- a/editor/frontend/package.json
+++ b/editor/frontend/package.json
@@ -58,7 +58,7 @@
     "cpx2": "^3.0.0",
     "eslint": "^7.11.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "//dependencies": [
     "NOTE: these dependencies should be only for things that DO NOT APPEAR IN THE API",
