--- a/presentation/components/package.json
+++ b/presentation/components/package.json
@@ -119,7 +119,7 @@
     "sinon": "^9.0.2",
     "sinon-chai": "^3.2.0",
     "typemoq": "^2.1.0",
-    "typescript": "~4.4.0",
+    "typescript": "4.9.1-beta",
     "xmlhttprequest": "^1.8.0"
   },
   "nyc": {
