--- a/presentation/frontend/package.json
+++ b/presentation/frontend/package.json
@@ -82,7 +82,7 @@
     "sinon-chai": "^3.2.0",
     "source-map-support": "^0.5.6",
     "typemoq": "^2.1.0",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "nyc": {
     "extends": "./node_modules/@itwin/build-tools/.nycrc"
