--- a/presentation/opentelemetry/package.json
+++ b/presentation/opentelemetry/package.json
@@ -63,7 +63,7 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "nyc": {
     "extends": "./node_modules/@itwin/build-tools/.nycrc"
