--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -56,7 +56,7 @@
     "eslint": "^7.11.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "peerDependencies": {
     "electron": ">=14.0.0 <18.0.0"
