--- a/tools/ecschema2ts/package.json
+++ b/tools/ecschema2ts/package.json
@@ -51,7 +51,7 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.6",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "dependencies": {
     "@itwin/core-bentley": "workspace:*",
