--- a/tools/webpack-core/package.json
+++ b/tools/webpack-core/package.json
@@ -49,7 +49,7 @@
     "@types/chai-jest-snapshot": "^1.3.0",
     "eslint": "^7.11.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0",
+    "typescript": "4.9.1-beta",
     "webpack": "^5.64.4",
     "cpx2": "^3.0.0",
     "mocha": "^10.0.0",
