--- a/ui/core-react/package.json
+++ b/ui/core-react/package.json
@@ -91,7 +91,7 @@
     "sinon-chai": "^3.2.0",
     "ts-node": "^10.8.2",
     "typemoq": "^2.1.0",
-    "typescript": "~4.4.0"
+    "typescript": "4.9.1-beta"
   },
   "//dependencies": [
     "NOTE: these dependencies should be only for things that DO NOT APPEAR IN THE API",
