add steps to automate ext api gen

--- a/core/extension/package.json
+++ b/core/extension/package.json
@@ -17,6 +17,7 @@
     "docs": "",
     "lint": "",
     "test": "",
+    "extract-api": "npm run -s generate",
     "generate": "node ./codeGen/generate-exports.js '[\"@itwin/core-frontend\",\"core/frontend\"] [\"@itwin/core-common\",\"core/common\"]'"
   },
   "keywords": [
