Updated gradle build files to use mobile-native-android

--- a/test-apps/display-test-app/android/imodeljs-test-app/app/src/main/AndroidManifest.xml
+++ b/test-apps/display-test-app/android/imodeljs-test-app/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
