--- a/test-apps/display-test-app/android/imodeljs-test-app/build.gradle
+++ b/test-apps/display-test-app/android/imodeljs-test-app/build.gradle
@@ -1,26 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        flatDir {
-            dirs "${System.env.OutRoot}AndroidARM64/imodeljsnodeaddon_pkgs/imodeljs-android-arm64"
-            dirs "${projectDir}/../../../node_modules/@itwin/core-backend/node_modules/@bentley/imodeljs-native/imodeljs-android-arm64"
-        }
-    }
+plugins {
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
 }
 
 task clean(type: Delete) {
