--- a/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
+++ b/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
@@ -36,5 +36,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-ui:2.5.2'
-    implementation 'com.github.itwin:mobile-sdk-android:0.10.31'
+    implementation 'com.github.itwin:mobile-native-android:3.5.0'
 }
