set python interpreter

--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -110,10 +110,27 @@ jobs:
 
       - task: PythonScript@0
         inputs:
-          scriptSource: filePath
-          scriptPath: common/scripts/tag_docs_build.py
+          scriptSource: inline
+          script: |
+            import os, subprocess, sys
+
+            ## Validate arguments
+            if len(sys.argv) != 2:
+              sys.exit("Invalid number of arguments to script provided.\nExpected: 1\nReceived: {0}".format(len(sys.argv) - 1))
+            outputDir = os.path.realpath(sys.argv[1])
+
+            # Get local version from @itwin/core-backend
+            cmd = ["node", "-p", "require('./core/backend/package.json').version"]
+            process = subprocess.run(cmd, shell=True, capture_output=True)
+            package_version = process.stdout.decode().strip()
+            print("Releasing version " + package_version)
+
+            f = open(os.path.join(outputDir, "version.txt"), "w")
+            f.write(package_version)
+            f.close()
           arguments: ${{ parameters.outputDir }}
           workingDirectory: ${{ parameters.workingDir }}
+          pythonInterpreter: python3
         displayName: Tag if new release
         condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
