--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -107,6 +107,9 @@ jobs:
       #   displayName: Tag if new release
       #   workingDirectory: ${{ parameters.workingDir }}
       #   condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: '3.x' # string. Required. Version spec. Default: 3.x.
 
       - task: PythonScript@0
         inputs:
@@ -130,7 +133,6 @@ jobs:
             f.close()
           arguments: ${{ parameters.outputDir }}
           workingDirectory: ${{ parameters.workingDir }}
-          pythonInterpreter: python3
         displayName: Tag if new release
         condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
