target correct vmImage

--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -25,7 +25,8 @@ jobs:
     # pool:
     #   name: iModelTechCI
     #   demands: Agent.OS -equals Windows_NT
-    pool: windows-latest
+    pool:
+      vmImage: windows-latest
     steps:
       - checkout: self
         path: itwinjs-core
