--- a/common/config/azure-pipelines/templates/publish-test-results.yaml
+++ b/common/config/azure-pipelines/templates/publish-test-results.yaml
@@ -10,9 +10,33 @@ steps:
   # Core Tests
   #-------
   - task: PublishTestResults@2
-    displayName: "Publish ALL Test Results"
+    displayName: "Publish junit Test Results"
     inputs:
-      testResultsFiles: "**/junit_results.xml"
+      testResultsFiles: |
+        core/backend/lib/test/junit_results.xml
+        core/bentley/lib/test/junit_results.xml
+        core/common/lib/test/junit_results.xml
+        core/ecschema-locaters/lib/test/junit_results.xml
+        core/ecschema-metadata/lib/test/junit_results.xml
+        core/frontend/lib/test/junit_results.xml
+        core/geometry/lib/test/junit_results.xml
+        core/i18n/lib/test/junit_results.xml
+        core/quantity/lib/test/junit_results.xml
+        presentation/backend/lib/test/junit_results.xml
+        presentation/common/lib/test/junit_results.xml
+        presentation/components/lib/test/junit_results.xml
+        presentation/frontend/lib/test/junit_results.xml
+        presentation/testing/lib/test/junit_results.xml
+        ui/abstract/lib/test/junit_results.xml
+        ui/components/lib/test/junit_results.xml
+        ui/core/lib/test/junit_results.xml
+        ui/framework/lib/test/junit_results.xml
+        ui/ninezone/lib/test/junit_results.xml
+        full-stack-tests/core/lib/test/junit_results.xml
+        full-stack-tests/presentation/lib/test/junit_results.xml
+        full-stack-tests/rpc/lib/test/junit_results.xml
+        example-code/app/lib/test/junit_results.xml
+        example-code/snippets/lib/test/junit_results.xml
       # testRunTitle: "Core - Backend Tests - $(Agent.OS) - ${{ parameters.NodeVersion }}"
       searchFolder: ${{ parameters.workingDir }}
     condition: succeededOrFailed()
