--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -57,9 +57,9 @@ jobs:
       parameters:
         buildIos: ${{ parameters.buildIos}}
 
-    # Will run if even there is a failure somewhere else in the pipeline.
-    - template: ../templates/publish-test-results.yaml
-      parameters:
-        NodeVersion: ${{ parameters.nodeVersion }}
+    # # Will run if even there is a failure somewhere else in the pipeline.
+    # - template: ../templates/publish-test-results.yaml
+    #   parameters:
+    #     NodeVersion: ${{ parameters.nodeVersion }}
     # The publish script identifies any new packages not previously published and tags the build
     - template: ../templates/publish.yaml
