--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -129,7 +129,7 @@ jobs:
             process = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE)
             try:
               out, err = process.communicate(timeout=15)
-            except subprocess.TimeoutExpired:
+            except subprocess:
               process.kill()
               out, err = process.communicate()
 
