--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -44,13 +44,9 @@ steps:
     displayName: rush build
     workingDirectory: ${{ parameters.workingDir }}
     condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))
-  - script: npm run build:ios
+  - script: npm run ios:all
     workingDirectory: "test-apps/display-test-app"
-    displayName: "Build iOS display-test-app typescript"
-    condition: and(succeeded(), or(eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.Reason'], 'Manual')), eq(variables['Agent.OS'], 'Darwin'))
-  - script: npm run build:ios-app
-    workingDirectory: "test-apps/display-test-app"
-    displayName: "Build iOS display-test-app swift"
+    displayName: "Build & run iOS display-test-app"
     condition: and(succeeded(), eq('${{ parameters.buildIos }}',true), or(eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.Reason'], 'Manual')), eq(variables['Agent.OS'], 'Darwin'))
   - script: node common/scripts/install-run-rush.js lint
     displayName: rush lint
